fix mobox's active z-index

--- a/src/less/mobox.less
+++ b/src/less/mobox.less
@@ -71,6 +71,7 @@
 }
 
 .mobox-open {
+    z-index:10000;
     .mobox-overlay,.mobox-icon-close {
 	    opacity: 1;
 	    pointer-events: auto;
